src/index.css
@import url("https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@500&family=Barlow&family=Chakra+Petch:wght@600&display=swap");

* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

:root {
	--primary-color: #ffee08;
	--caption-color: rgba(255, 238, 8, 0.48);
	--background-color: #030816;
}

body {
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

button {
	position: relative;
	background: none;
	border: none;
	outline: none;
	cursor: pointer;
}

.app {
	background: var(--background-color);
	background-size: cover;
	background-blend-mode: multiply;
	width: 100vw;
	height: 100vh;
	overflow: hidden;
	display: flex;
	justify-content: center;
	align-items: flex-end;
}

.layout {
	padding: 40px;
	margin-bottom: 36px;
	max-width: 390px;
}

.songDetails,
.songDetails__info {
	display: flex;
	flex-direction: column;
	align-items: center;
}

.songDetails__info,
.progress__time {
	user-select: none;
	-webkit-user-select: none;
	-moz-user-select: none;
}

.songDetails__info {
	margin-top: 26px;
}

.songDetails__image {
	transition: opacity 0.25s ease-in;
}

.songDetails__artistName,
.songDetails__songName {
	text-align: center;
}

.songDetails__songName {
	font-family: "Chakra Petch";
	font-weight: 600;
	font-size: 24px;
	line-height: 31px;
	color: var(--primary-color);
}

.songDetails__artistName {
	margin-top: 6px;
	font-family: "Barlow";
	font-weight: 400;
	font-size: 16px;
	line-height: 16px;
	letter-spacing: 0.1em;
	color: var(--caption-color);
}

.extraControls {
	margin-top: 42px;
	display: flex;
	justify-content: space-between;
	align-items: center;
}

.volume {
	position: relative;
}

.volume__barContainer {
	position: absolute;
	top: -166px;
	left: -12px;
}

.volume__bar {
	width: 54px;
	height: 150px;
	background: url("https://res.cloudinary.com/tropicolx/image/upload/v1675201998/music_app/volume-bar-container_ew2yi7.svg");
}

.volume__icon {
	cursor: pointer;
	width: 30px;
	height: 30px;
}

.volume__iconBlocker {
	position: absolute;
	top: 0;
	left: 0;
	width: 30px;
	height: 30px;
	background-color: transparent;
	cursor: pointer;
}

.volume__barSlider {
	-webkit-appearance: none;
	appearance: none;
	transform: rotate(-90deg);
	position: absolute;
	top: 70px;
	left: -40px;
	background: transparent;
	border: 2px solid var(--primary-color);
	width: 136px;
	height: 8px;
}

.volume__barSlider:focus {
	outline: none;
}

.volume__barSlider:focus::-webkit-slider-thumb {
	outline: 2px solid var(--primary-color);
}

.volume__barSlider::-webkit-slider-thumb {
	-webkit-appearance: none;
	appearance: none;
	width: 17px;
	height: 27px;
	outline: 2px solid var(--primary-color);
	border-radius: 5px;
	background: #f8ef00;
	cursor: pointer;
	position: relative;
}

.progress {
	margin-top: 42px;
}

.progress__barSlider {
	-webkit-appearance: none;
	appearance: none;
	background: transparent;
	border: 2px solid rgba(255, 238, 8, 0.5);
	width: 100%;
	height: 8px;
}

.progress__barSlider:focus {
	outline: none;
}

.progress__barSlider:focus::-webkit-slider-thumb {
	outline: 2px solid var(--primary-color);
}

.progress__barSlider::-webkit-slider-thumb {
	-webkit-appearance: none;
	appearance: none;
	width: 14px;
	height: 14px;
	outline: 2px solid var(--primary-color);
	background: #f8ef00;
	/* border-radius: 50%; */
	cursor: pointer;
	position: relative;
}

.progress__barSlider::-moz-range-thumb {
	width: 14px;
	height: 14px;
	outline: 2px solid var(--primary-color);
	background: #f8ef00;
	cursor: pointer;
	position: relative;
}

.progress__time {
	margin-top: 10px;
	font-family: "Bai Jamjuree";
	font-weight: 500;
	font-size: 12px;
	line-height: 15px;
	color: var(--primary-color);
	display: flex;
	justify-content: space-between;
	align-items: center;
}

.playerControls {
	margin-top: 45px;
	display: flex;
	align-items: center;
	justify-content: space-between;
}

.dot {
	position: absolute;
	bottom: -2px;
	left: 10.8px;
	width: 5px;
	height: 5px;
	border-radius: 50%;
	background-color: var(--primary-color);
}

.shuffle .dot {
	left: 9px;
}

.playerControls__main {
	display: flex;
	align-items: center;
}

.playerControls__main > :not(:first-child) {
	margin-left: 23px;
}

#canvasWrapper canvas {
	outline: 2px solid var(--primary-color);
}

@media only screen and (min-width: 768px) {
	.app {
		align-items: center;
	}

	.layout {
		border: 2px solid var(--primary-color);
		margin-bottom: 0px;
	}
}

@media only screen and (max-height: 790px) {
	.layout {
		margin-bottom: 0px;
	}
}

